fixed overflow happening from transforming breakout items

--- a/blocks/include/include.css
+++ b/blocks/include/include.css
@@ -26,6 +26,7 @@
   grid-template-columns: subgrid;
   grid-column: full-width;
   grid-auto-flow: row;
+  overflow: clip;
 
   &.block {
     margin-block: var(--spacing-12);
